create project for the frontend part of cool

--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,6 @@
   	<module>aspectjm</module>
   	<module>coolm</module>
   	<module>frontend</module>
+  	<module>coolf</module>
   </modules>
 </project>
