--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,6 @@
   	<module>coolm</module>
   	<module>frontend</module>
   	<module>coolf</module>
+  	<module>boundedstack</module>
   </modules>
 </project>
