add a way to weave the different frontends using ant

--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,34 @@
 	<target name="tools">
 		<mkdir dir="dist"/>
 		<echo>Creating tools</echo>
+		<taskdef resource="net/sf/antcontrib/antlib.xml"/>
+
+		<var name="classpath" value=""/>
+		<if>
+			<isset property="frontendDeps"/>
+			<then>
+				<for list="${frontendDeps}" param="dep">
+					<sequential>
+						<var name="classpath" value="${classpath}${path.separator}@{dep}"/>
+					</sequential>
+				</for>
+			</then>
+		</if>
+
+		<var name="inpath" value="libs/aspectjtools-1.7.4.jar${path.separator}frontend/target/frontend-1.0-SNAPSHOT.jar"/>
+		<if>
+			<isset property="frontends"/>
+			<then>
+				<for list="${frontends}" param="frontend">
+					<sequential>
+						<var name="inpath" value="${inpath}${path.separator}@{frontend}"/>
+					</sequential>
+				</for>
+			</then>
+		</if>
+
+		<!-- <echo message="aa: ${inpath}"/> -->
+
 		<java fork="true" classname="org.aspectj.tools.ajc.Main">
 			<classpath>
                                 <!-- see https://bugs.eclipse.org/bugs/show_bug.cgi?id=430930 -->
@@ -9,10 +37,10 @@
                                 <fileset dir="libs">
 				        <include name="*.jar"/>
 			        </fileset>
-                                <pathelement path="frontend/target/frontend-1.0-SNAPSHOT.jar"/>
+				<pathelement path="${classpath}"/>
 			</classpath>
 
-			<arg line="-inpath libs/aspectjtools-1.7.4.jar"/>
+			<arg line="-inpath ${inpath}"/>
 			<arg line="-outjar dist/awesome_tools.jar"/>
 		</java>
 	</target> 
